[project]
name = "credit-card-guide-india"
version = "1.0.0"
description = "Best Credit Card Guide for India - A web application to analyze and recommend credit cards based on user profile"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.40.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
]

[project.scripts]
start = "streamlit run app.py"
